--- a/analysis/references.bib
+++ b/analysis/references.bib
@@ -856,3 +856,44 @@
 	url = {http://dx.doi.org/10.1029/2017JF004494},
 	langid = {en}
 }
+
+@article{montgomery1994a,
+	title = {A physically based model for the topographic control on shallow landsliding},
+	author = {Montgomery, David R. and Dietrich, William E.},
+	year = {1994},
+	month = {04},
+	date = {1994-04},
+	journal = {Water Resources Research},
+	pages = {1153--1171},
+	volume = {30},
+	number = {4},
+	doi = {10.1029/93wr02979},
+	url = {http://dx.doi.org/10.1029/93WR02979},
+	langid = {en}
+}
+
+@inbook{dietrich2001a,
+	title = {Validation of the Shallow Landslide Model, SHALSTAB, for forest management},
+	author = {Dietrich, William E. and Bellugi, Dino and Real de Asua, Raphael},
+	year = {2001},
+	date = {2001},
+	publisher = {American Geophysical Union},
+	pages = {195--227},
+	doi = {10.1029/ws002p0195},
+	url = {http://dx.doi.org/10.1029/WS002p0195}
+}
+
+@article{iverson2014a,
+	title = {Debris flows: behaviour and hazard assessment},
+	author = {Iverson, Richard M.},
+	year = {2014},
+	month = {01},
+	date = {2014-01},
+	journal = {Geology Today},
+	pages = {15--20},
+	volume = {30},
+	number = {1},
+	doi = {10.1111/gto.12037},
+	url = {http://dx.doi.org/10.1111/gto.12037},
+	langid = {en}
+}
